--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
     "firebase-admin": "^12.0.0",
+    "nestjs-rate-limiter": "^3.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
